--- a/01_intro/Untitled.ipynb
+++ b/01_intro/Untitled.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3be42008-24a6-4cd7-87b2-f64791d152e4",
    "metadata": {},
    "outputs": [],
@@ -273,13 +273,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "72463f42-4877-4cce-854c-7ac759419332",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.7.0'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sk.__versi"
+    "sk.__version__"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65c9b78a-a7b7-44f2-a400-505ac2248e57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
